# QMidi

./: .gitignore  CMakeLists.txt  QMidiConfig.cmake
src/: QMidiFile.cpp  QMidiIn.h  QMidiOut.cpp  QMidiOut.h
src/OS/: QMidi_ALSA.cpp  QMidi_CoreMidi.cpp  QMidi_Haiku.cpp  QMidi_Win32.cpp
